# rex-examples

./: .gitignore  README.md
AI/SSD_Inception_exam/common/src/: rknn_helper.cc
AI/SSD_Inception_exam/inc/: ssd.h
AI/SSD_Inception_exam/src/: ssd.cc
AI/Supervised/Object_detection/SSD/: ssd.cc  ssd.h
AI/Supervised/Object_detection/SSD_Inception_exam/: CMakeLists.txt
AI/Supervised/autopilot-in-rex-kit/: CMakeLists.txt  README.md  autopilot
AI/Supervised/autopilot-in-rex-kit/inc/: ssd.h
AI/Supervised/autopilot-in-rex-kit/src/: main.cc  ssd.cc  yuv.c
AI/Supervised/emotion_recognition-in-rex_kit/: CMakeLists.txt  Emotion_Recognition  README.md  emotion.txt
AI/Supervised/emotion_recognition-in-rex_kit/inc/: ssd.h  track_c_link_c++.h
AI/Supervised/emotion_recognition-in-rex_kit/src/: emotion.cc  main.cc  ssd.cc
AI/Supervised/kindnet-in-rex-kit/: 3.rknn  CMakeLists.txt  README.md  demo.py  kindnet  kindnet.rknn
AI/Supervised/kindnet-in-rex-kit/inc/: ssd.h
AI/Supervised/kindnet-in-rex-kit/src/: main.cc  ssd.cc  track_c_link_c++.cpp
AI/Supervised/traffic_light_detection-in-rex-kit/: CMakeLists.txt  TrafficLight  TrafficLight_bin  TrafficLight_real  TrafficLight_sim
AI/Supervised/traffic_light_detection-in-rex-kit/inc/: ssd.h
AI/Supervised/traffic_light_detection-in-rex-kit/src/: main.cc  ssd.cc
AI/Unsupervised/: README.md
AUDIO/: Audio DeviceTree.md  Audio Example.md  USB Audio.md
CAMERA/V4L2_exam/: CMakeLists.txt  README.md
CAMERA/V4L2_exam.bak/: CMakeLists.txt  README.md
CAMERA/V4L2_exam.bak/include/: configs.h
CAMERA/V4L2_exam.bak/src/: camera_helper.c  main.c
CAMERA/V4L2_exam/common/include/rga/: RgaApi.h  RockchipRga.h
CAMERA/V4L2_exam/common/libs/: libconfig.la
CAMERA/V4L2_exam/common/src/: drm_module.cc  rga_helper.cc
CAMERA/V4L2_exam/include/: camera_helper.h  capture.h  configs.h  display.h  yuv.h
CAMERA/V4L2_exam/src/: V4L2stream.c  buffer.c  capture.c  display.c  drm_module.cc  main.cc  yuv.c
DISPLAY/DRM_Display_exam/: CMakeLists.txt  README.md
DISPLAY/DRM_Display_exam/include/: rga.h
DISPLAY/DRM_Display_exam/include/rga/: rga.h
DISPLAY/DRM_Display_exam/libs/libdrm_a/: libdrm.la  libdrm_freedreno.la  libdrm_rockchip.la  libkms.la
DISPLAY/DRM_Display_exam/libs/libdrm_a/pkgconfig/: libdrm.pc  libdrm_freedreno.pc  libdrm_rockchip.pc  libdrm_vc4.pc  libkms.pc
DISPLAY/DRM_Display_exam/src/: drm_display_exam.cc
PERIPHERAL/IMU/: CMakeLists.txt  README.md
PERIPHERAL/IMU/src/: main.cc
PERIPHERAL/LED/: CMakeLists.txt
PERIPHERAL/LED/inc/: pca9632.h
PERIPHERAL/LED/src/: main.c  pca9632.c
STUDY/: README.md
STUDY/Reinforcement/: README.md
STUDY/Reinforcement/autopilot_tensorflow/: README.md  driving_data.py  final.rknn  freeze.py  graph.pb  make_rknn.py  model.py  run_rknn.py  train.py
STUDY/Reinforcement/autopilot_tensorflow/save/: model.ckpt.index
STUDY/Reinforcement/frozen_lake/: README.md  e-greedy.py  random_noise.py
STUDY/Reinforcement/learning-to-drive-in-5-minutes/: README.md  config.py  enjoy.py  requirements.txt  train.py
STUDY/Reinforcement/learning-to-drive-in-5-minutes/algos/: custom_ddpg.py  custom_ppo2.py  custom_sac.py
STUDY/Reinforcement/learning-to-drive-in-5-minutes/donkey_gym/: README.md  __init__.py
STUDY/Reinforcement/reinforcement-super-mario/: .gitignore  README.md  agent.py  main.py
STUDY/Supervised/: README.md
STUDY/Supervised/defect_detection/: README.md
STUDY/Supervised/depth-map-estimation/: README.md  video.py
STUDY/Supervised/dncnn/: main.py  model.py
STUDY/Supervised/emotion-recognition/: README.md
STUDY/Supervised/kind-net_low-light-image-enhancement-/: README.md  adjustment_net_train.py  decomposition_net_train.py  evaluate.py  evaluate_LOLdataset.py  model.py  reflectance_restoration_net_train.py
STUDY/Supervised/super-resolution-gan/: README.md  btgen.py  convert.py  events.out.tfevents.1590049741.nipa2020-0683  export_graph.py  main.py  model.py  pred.py  rknn_sr.py  vgg.py
STUDY/Timeseries/: README.md
STUDY/Timeseries/smp_forecasting/: README.md
STUDY/Unsupervised/cyclegan/: build_data.py  download_dataset.sh  ops.py  rknn_gan.py  train.py
TOOLS/SDDiskTool_v1.56/: SD카드를 이용한 펌웨어 업데이트 방법.txt
TOOLS/SDDiskTool_v1.56/SDDiskTool_v1.56/: config.ini  sd_boot_config.config
(+135 files in other folders)
